// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAction --package-manager does not run install when --package-manager is omitted 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --package-manager does not run install when --package-manager none is passed 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --package-manager installs into --target-dir when explicitly provided 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /custom/dir[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running npm install in /custom/dir...[n]",
  "[    log] npm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log does not exist (new project) does not warn about --package-manager 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running npm install in /tmp/test/test...[n]",
  "[    log] npm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log does not exist (new project) runs install with the specified --package-manager 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running npm install in /tmp/test/test...[n]",
  "[    log] npm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log does not exist (new project) saves the scaffold log after scaffolding 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log exists (existing project) does not warn and skips install when --package-manager is "none" 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log exists (existing project) does not warn and skips install when --package-manager is omitted 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log exists (existing project) does not warn when --package-manager matches the logged value 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running npm install in /tmp/test/test...[n]",
  "[    log] npm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log exists (existing project) overrides --package-manager with logged value and warns 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[warning] --package-manager \\"npm\\" is overridden by \\"pnpm\\" from the existing project's scaffold log.[n]",
  "[    log] Running pnpm install in /tmp/test/test...[n]",
  "[    log] pnpm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log exists (existing project) saves the scaffold log after scaffolding 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running npm install in /tmp/test/test...[n]",
  "[    log] npm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager restriction for existing projects when scaffold log exists (existing project) uses the specified --package-manager when log has no package manager 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running npm install in /tmp/test/test...[n]",
  "[    log] npm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager runs npm install when --package-manager npm is passed 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running npm install in /tmp/test/test...[n]",
  "[    log] npm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager runs pnpm install when --package-manager pnpm is passed 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running pnpm install in /tmp/test/test...[n]",
  "[    log] pnpm install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager runs yarn install when --package-manager yarn is passed 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running yarn install in /tmp/test/test...[n]",
  "[    log] yarn install completed successfully.[n]",
]
`;

exports[`CreateAction --package-manager uses stdio: inherit so package manager output reaches the user 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
  "[    log] Running npm install in /tmp/test/test...[n]",
  "[    log] npm install completed successfully.[n]",
]
`;

exports[`CreateAction --spfx-version is ignored (with no throw) when --local-source is also provided 1`] = `
Array [
  "[warning] --spfx-version is ignored when --local-source is specified.[n]",
  "[    log] Adding local template source: /a[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --spfx-version passes ref to PublicGitHubRepositorySource when --spfx-version is set 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx (branch: version/1.22)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --spfx-version passes ref when SPFX_TEMPLATE_REPO_URL and --spfx-version are both set 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/my-org/my-templates (branch: version/1.22)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --spfx-version uses --spfx-version over branch encoded in SPFX_TEMPLATE_REPO_URL /tree/ path 1`] = `
Array [
  "[warning] --template-url contains a branch ('/tree/pending-fixes'). --spfx-version \\"1.22\\" will take precedence.[n]",
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx (branch: version/1.22)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --target-dir derivation defaults to cwd/solutionName when --target-dir is omitted 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --target-dir derivation uses cwd/solutionName when --solution-name is provided without --target-dir 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/my-app[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction --target-dir derivation uses explicit --target-dir and ignores solution name derivation 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /custom/dir[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction GITHUB_TOKEN passthrough passes token to --remote-source sources 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] Adding remote template source: https://github.com/my-org/my-templates[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction GITHUB_TOKEN passthrough passes token to PublicGitHubRepositorySource when GITHUB_TOKEN is set 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction GITHUB_TOKEN passthrough passes undefined token when GITHUB_TOKEN is not set 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction GITHUB_TOKEN passthrough treats whitespace-only GITHUB_TOKEN as undefined 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction GITHUB_TOKEN passthrough trims whitespace from GITHUB_TOKEN 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL /tree/ branch extraction extracts branch from /tree/ in SPFX_TEMPLATE_REPO_URL 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx (branch: pending-fixes)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL /tree/ branch extraction extracts branch from /tree/ on a GHE host 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.mycompany.com/org/repo (branch: my-branch)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL /tree/ branch extraction handles .git before /tree/ 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx (branch: 1.22)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL /tree/ branch extraction handles version-like branch name in /tree/ path 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx (branch: 1.22)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL /tree/ branch extraction ignores subdirectory suffix after the branch name in /tree/ path 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx (branch: main)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL /tree/ branch extraction passes undefined ref when URL has no /tree/ and no --spfx-version 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL normalization handles .git then slash together 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL normalization strips .git suffix 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL normalization strips multiple trailing slashes 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL normalization strips trailing slash 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction URL normalization trims whitespace 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction source selection with --local-source should add a LocalFileSystemRepositorySource for the provided path 1`] = `
Array [
  "[    log] Adding local template source: /path/to/templates[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction source selection with --local-source should add multiple sources for multiple --local-source flags 1`] = `
Array [
  "[    log] Adding local template source: /a[n]",
  "[    log] Adding local template source: /b[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction source selection with --remote-source adds an extra PublicGitHubRepositorySource alongside the default 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] Adding remote template source: https://github.com/my-org/my-templates[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction source selection with --remote-source adds multiple remote sources for multiple --remote-source flags 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] Adding remote template source: https://github.com/org1/repo1[n]",
  "[    log] Adding remote template source: https://github.com/org2/repo2[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction source selection with --remote-source extracts branch from /tree/ in --remote-source URL 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] Adding remote template source: https://github.com/my-org/my-templates (branch: my-branch)[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction source selection with --remote-source works alongside --local-source without adding the default GitHub source 1`] = `
Array [
  "[    log] Adding local template source: /path/to/templates[n]",
  "[    log] Adding remote template source: https://github.com/my-org/my-templates[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction source selection without --local-source should add a PublicGitHubRepositorySource with the default URL 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction source selection without --local-source should use SPFX_TEMPLATE_REPO_URL when set 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/my-org/my-templates[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction spfxVersionForBadgeUrl escapes hyphens in prerelease versions for shields.io badge URLs 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction spfxVersionForBadgeUrl leaves stable versions unchanged 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;

exports[`CreateAction whitespace env var fix falls back to default URL when SPFX_TEMPLATE_REPO_URL is whitespace-only 1`] = `
Array [
  "[    log] Using GitHub template source: https://github.com/SharePoint/spfx[n]",
  "[    log] [Mocked SPFxTemplateCollection][n]",
  "[    log] targetDir: /tmp/test/test[n]",
  "[    log] [n]",
  "[    log] The following files will be generated:[n]",
  "[    log] [n]",
]
`;
